# You may not use this file except in compliance with the License.
# A copy of the License was distributed with this file or you may obtain a
# copy of the License from http://www.apache.org/licenses/LICENSE-2.0

Revision history for Capture-Tiny

  Added:

  - Added support for $ENV{PERL_CAPTURE_TINY_TIMEOUT} to control
    the timeout period under 'tee'

0.08 Sun Jun 20 19:13:19 EDT 2010

  Fixed:

  - Exceptions in captured coderef are caught, then handles are restored
    before the exception is rethrown (RT #58208)

0.07 Sun Jan 24 00:18:45 EST 2010

  Fixed:

  - Changed test for $? preservation to be more portable

  - Dropped support for Perl 5.8.0 specifically due to excessive bugs.
    Tests will bail out. (5.6.X is still supported)

0.06 Thu May  7 06:54:53 EDT 2009

  Fixed:

    - On Win32, subprocesses now close themselves on EOF instead of being
      killed with a signal

0.05_51 Tue Apr 21 07:00:38 EDT 2009

  Added:

    - Support for wide characters on handles opened to utf8

    - Support for STDOUT, STDERR or STDIN opened to in-memory
      files (open to scalar reference) or tied, albeit with some limitations

  Testing:

    - Verify that $? is preserved during capture { system(@cmd) };

0.05 Tue Mar  3 06:56:05 EST 2009

  Fixed:

    - On Win32, increased a delay waiting for buffers to flush to avoid losing
      final output during tee()

0.04 Wed Feb 25 09:25:27 EST 2009

  Added:

    - Can capture/tee even if STDIN, STDOUT or STDERR are closed prior to
      capture/tee block

    - Generally, added more error handling

  Fixed:

    - Will timeout instead of hang if subprocesses fail to start

0.03 Fri Feb 20 13:03:08 EST 2009

  Added:

    - capture_merged() and tee_merged()

  Fixed:

    - Tests skip if not Win32 and no fork() (rather than Build.PL and
      Makefile.PL failing); this allows capture() on odd platforms, even if
      fork doesn't work

0.02 Tue Feb 17 17:24:35 EST 2009

  Fixed:
